--- a/package.json
+++ b/package.json
@@ -23,12 +23,11 @@
     "tabWidth": 2
   },
   "dependencies": {
+    "@dcl/eslint-config": "^2.2.1",
     "@well-known-components/env-config-provider": "^1.2.0",
     "@well-known-components/http-server": "^2.1.0",
     "@well-known-components/interfaces": "^1.5.1",
     "@well-known-components/logger": "^3.1.3",
-    "@well-known-components/metrics": "^2.1.0",
-    "@well-known-components/pg-component": "^1.1.0",
-    "sql-template-strings": "^2.2.2"
+    "@well-known-components/metrics": "^2.1.0"
   }
 }
