--- a/package.json
+++ b/package.json
@@ -1,13 +1,18 @@
 {
-  "name": "template-server",
+  "name": "comms-message-sfu",
   "scripts": {
     "build": "tsc -p tsconfig.json",
     "start": "node --trace-warnings --abort-on-uncaught-exception --unhandled-rejections=strict dist/index.js",
-    "test": "jest --forceExit --detectOpenHandles --coverage --verbose"
+    "dev": "nodemon --watch 'src/**' --ext 'ts,json' --ignore 'src/**/*.spec.ts' --ignore 'src/migrations' --exec 'ts-node src/index.ts'",
+    "test": "jest --forceExit --detectOpenHandles --coverage --verbose --passWithNoTests",
+    "lint:check": "eslint '**/*.{js,ts}'",
+    "lint:fix": "eslint '**/*.{js,ts}' --fix"
   },
   "devDependencies": {
     "@types/node": "^20.14.2",
     "@well-known-components/test-helpers": "^1.5.8",
+    "nodemon": "^3.1.10",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   },
   "prettier": {
@@ -18,6 +23,7 @@
     "tabWidth": 2
   },
   "dependencies": {
+    "@dcl/eslint-config": "^2.2.1",
     "@well-known-components/env-config-provider": "^1.2.0",
     "@well-known-components/http-server": "^2.1.0",
     "@well-known-components/interfaces": "^1.5.1",
