--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@well-known-components/http-server": "^2.1.0",
     "@well-known-components/interfaces": "^1.5.1",
     "@well-known-components/logger": "^3.1.3",
-    "@well-known-components/metrics": "^2.1.0"
+    "@well-known-components/metrics": "^2.1.0",
+    "@well-known-components/pg-component": "^1.1.0"
   }
 }
