--- a/package.json
+++ b/package.json
@@ -24,11 +24,13 @@
   },
   "dependencies": {
     "@dcl/eslint-config": "^2.2.1",
+    "@livekit/rtc-node": "^0.13.13",
     "@well-known-components/env-config-provider": "^1.2.0",
     "@well-known-components/http-server": "^2.1.0",
     "@well-known-components/interfaces": "^1.5.1",
     "@well-known-components/logger": "^3.1.3",
     "@well-known-components/metrics": "^2.1.0",
-    "@well-known-components/pg-component": "^1.1.0"
+    "@well-known-components/pg-component": "^1.1.0",
+    "livekit-server-sdk": "^2.13.0"
   }
 }
