--- a/.env.default
+++ b/.env.default
@@ -13,3 +13,15 @@ HTTP_SERVER_HOST=0.0.0.0
 # reset metrics at 00:00UTC
 WKC_METRICS_RESET_AT_NIGHT=false
 
+PG_COMPONENT_PSQL_PORT='5432'
+PG_COMPONENT_PSQL_HOST='localhost'
+PG_COMPONENT_PSQL_DATABASE='social_service_ea'
+PG_COMPONENT_PSQL_USER='postgres'
+PG_COMPONENT_PSQL_PASSWORD='postgres'
+
+LIVEKIT_HOST=your-livekit-host
+LIVEKIT_API_KEY=your-livekit-api-key
+LIVEKIT_API_SECRET=your-livekit-api-secret
+LIVEKIT_ROOM_NAME=your-room-name
+LIVEKIT_IDENTITY_PREFIX=your-identity-prefix
+REPLICA_ID=your-replica-id
