chore: Update env default values

--- a/.env.default
+++ b/.env.default
@@ -23,5 +23,5 @@ LIVEKIT_HOST=your-livekit-host
 LIVEKIT_API_KEY=your-livekit-api-key
 LIVEKIT_API_SECRET=your-livekit-api-secret
 LIVEKIT_ROOM_ID=your-room-id
-LIVEKIT_IDENTITY_PREFIX=your-identity-prefix
-REPLICA_ID=your-replica-id
+LIVEKIT_IDENTITY_PREFIX=message-router
+REPLICA_ID=0
